Add plugin-ui specific login resources
